lots of little changes

--- a/tests/fb_la_test/connect/templates/index.html
+++ b/tests/fb_la_test/connect/templates/index.html
@@ -4,6 +4,7 @@
 	<title>This is a test</title>
 </head>
 <body>
+    <h1>django-la-facebook connection test page</h1>
 	<a href="https://www.facebook.com/dialog/oauth?client_id={{ app_id }}&redirect_uri=http%3A//localhost%3A8000/after&scope=email,read_stream">Connect to Facebook!</a>
 </body>
 </html>
