--- a/tests/fb_la_test/connect/templates/after.html
+++ b/tests/fb_la_test/connect/templates/after.html
@@ -4,6 +4,13 @@
 	<title>This is a test</title>
 </head>
 <body>
-	Your code is: {{ code }}
+    
+    <h1>Results page</h1>
+    {% if code == None %}
+        <p>Login Failure</p>
+    {% else %}
+       <p> Login Success</p>
+    {% endif %}
+	<p>Your code is: {{ code }}</p>
 </body>
 </html>
