So Danny doesn't want me using full URLs, eh?

--- a/tests/fb_la_test/connect/templates/index.html
+++ b/tests/fb_la_test/connect/templates/index.html
@@ -4,6 +4,6 @@
 	<title>This is a test</title>
 </head>
 <body>
-	<a href="http://localhost:8000/la_facebook/login?next=http://localhost:8000/after">Connect to Facebook!</a>
+	<a href="http://localhost:8000/la_facebook/login?next=/after">Connect to Facebook!</a>
 </body>
 </html>
